--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,15 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 444444 #80B3FF
+  primary-rgb: "68,68,68" #"128,179,255"
+  secondary: 000000 #FD6E8A
+  secondary-dark: 000000 #A2122F
 
 # Footer settings
 footer:
   copyright: Aamir Nasir
-  location: India
+  location: Location
   social: Around the Web
   credits: Credits
 
