--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ footer:
   copyright: Aamir Nasir
   location: Location
   social: Around the Web
-  credits: Credits
+  #credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
