--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Aamir Nasir
 email: TheAamirNasir@gmail.com
 url: https://github.com/TheAamirNasir
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Data Scientist"
 keywords: "your keywords, separated by commas"
 skills: "Data Scientist"
-meta_author: Nasir Aamir
+meta_author: Aamir Nasir
 
 # Google webmaster tools
 google_verify:
