--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social:
   - title: instagram
     url: http://instagram.com/TheAamirNasir
   - title: facebook
-    url: https://www.facebook.com/TheAamirNasir
+    url: http://www.facebook.com/TheAamirNasir
   - title: twitter
     url: http://twitter.com/TheAamirNasir
   - title: github
