--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ social:
     url: https://twitter.com/TheAamirNasir
   - title: github
     url: https://github.com/TheAamirNasir
+  - title: medium
+    url: https://medium.com/@TheAamirNasir
 
 # Postal address (add as many lines as necessary)
 #address:
