--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ social:
     url: https://github.com/TheAamirNasir
   - title: medium
     url: https://medium.com/@TheAamirNasir
+  - title: email
+    url: mailto:TheAamirNasir@gmail.com
 
 # Postal address (add as many lines as necessary)
 #address:
