--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Aamir Nasir
 email: TheAamirNasir@gmail.com
 url: https://github.com/TheAamirNasir
 description: "Data Scientist"
-keywords: "your keywords, separated by commas"
+keywords: "data, scientist, scrum master, prompt, engineer, software"
 skills: "Data Scientist"
 meta_author: Aamir Nasir
 
