--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ social:
     url: https://github.com/TheAamirNasir
   - title: medium
     url: https://medium.com/@TheAamirNasir
-  - title: email
+  - title: mail
     url: mailto:TheAamirNasir@gmail.com
 
 # Postal address (add as many lines as necessary)
